syntax = "proto3";

package app.gen_code.api;
option go_package = "github.com/thesisK19/buildify/app/gen-code/api";

import "google/api/annotations.proto";
import "app/gen-code/api/data.proto";

service GenCodeService {
    rpc GenReactSourceCode(GenReactSourceCodeRequest)
        returns (GenReactSourceCodeResponse) {
        option (google.api.http) = {
            post : "/gen-code-service/api/gen-react-code"
            body : "*"
        };
    }
    rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse) {
        option (google.api.http) = {
            get : "/gen-code-service/api/hello-world"
        };
    }
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
        option (google.api.http) = {
            get : "/"
        };
    }
}

message GenReactSourceCodeRequest {
    repeated Node nodes = 1;
    repeated Page pages = 2;
}

message GenReactSourceCodeResponse { string url = 1; }

message HelloWorldRequest {}
message HelloWorldResponse {
    string message = 1;
}

message HealthCheckRequest {}
message HealthCheckResponse {}
